# agents

./: .gitignore  .gitmodules  Cargo.toml  README.md
agents/: Cargo.toml
agents/examples/: chat.rs  function.rs
agents/src/: lib.rs
agents/src/agent/: mod.rs
agents/src/agents/: agent.rs  auto_agent.rs  auto_gent.rs  conversational_agent.rs  function_executor_agent.rs  mod.rs
agents/src/agents/auto_agent/: mod.rs
agents/src/agents/auto_agent/instruction/: mod.rs
agents/src/agents/auto_agent/instruction/functions/: mod.rs
agents/src/agents/auto_agent/models/: mod.rs
agents/src/agents/auto_agent/models/openai/: mod.rs
agents/src/assistant_agent/: mod.rs
agents/src/communication/: mod.rs
agents/src/communication/conversation/: mod.rs
agents/src/communication/message/: mod.rs
agents/src/communication/message/content/: mod.rs
agents/src/conversation/: mod.rs
agents/src/function/: mod.rs  parameter.rs
agents/src/instruction/: mod.rs  multicall.rs
agents/src/instruction/functions/: mod.rs
agents/src/message/: mod.rs
agents/src/message/content/: mod.rs
agents/src/models/: mod.rs
agents/src/models/openai/: api_key.rs  mod.rs
agents/tests/: chat.rs  function.rs
workbench/: .gitignore  chat.py  function_callback.py  groupchat.py  image.py
