[package]
name = "agents"
version = "0.1.0"
edition = "2021"
description = "General Purpose Agents"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openai.workspace = true
tokio = { version = "1.36", features = ["full"] }
async-recursion = "1.0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
dotenv = "0.15"